AP-25455: Configure NodeTimer with our proxy preferences
AP-25455 (Replace manually-created Apache HttpClients by our ProxyHttpClients factory)